feat: add scroll smooth

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    @apply scroll-smooth;
+  }
   body {
     font-family: "Inter", sans-serif;
   }
